--- a/gradle.properties
+++ b/gradle.properties
@@ -43,3 +43,12 @@ mod_group_id=com.example.examplemod
 mod_authors=YourNameHere, OtherNameHere
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+
+## Dependencies Properties
+jei_version=15.8.2.26
+registrate_version=MC1.20-1.3.11
+registrate_version_range=[MC1.20-1.3.3,)
+
+## User Properties
+developmentEnvironmentUserName = Xir_
+developmentEnvironmentUserUUID = 00e4a3be-ed21-4be2-88a6-8e82729eaced
