--- a/build.gradle
+++ b/build.gradle
@@ -115,6 +115,11 @@ sourceSets.main.resources.srcDir generateModMetadata
 // To avoid having to run "generateModMetadata" manually, make it run on every project reload
 legacyForge.ideSyncTask generateModMetadata
 
+tasks.register('sourcesJar', Jar) {
+    archiveClassifier.set('sources')
+    from sourceSets.main.allSource
+}
+
 // Example configuration to allow publishing using the maven-publish plugin
 publishing {
     publications {
