--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,8 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     // bug -> https://github.com/neoforged/ModDevGradle/issues/227
-    id 'net.neoforged.moddev.legacyforge' version '2.0.64-beta'
+//    id 'net.neoforged.moddev.legacyforge' version '2.0.64-beta'
+    id 'net.neoforged.moddev.legacyforge' version '2.0.80'
     id 'online.keriils.plugins.spotless-wrapper' version '0.1.3'
 }
 
