--- a/gradle.properties
+++ b/gradle.properties
@@ -52,3 +52,6 @@ registrate_version_range=[MC1.20-1.3.3,)
 ## User Properties
 developmentEnvironmentUserName = Xir_
 developmentEnvironmentUserUUID = 00e4a3be-ed21-4be2-88a6-8e82729eaced
+
+## Mixin Debug
+usesMixinDebug = false
